my/configuration-management/k8s-configs/my-namespace/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-namespace
spec:
  selector:
    app: nginx # This will select the nginx-pod based on the label app=nginx
  ports:
    - protocol: TCP
      port: 80  # The port on which the service will be accessible
      targetPort: 80  # The port on the pod to which traffic will be forwarded
  type: ClusterIP  # Exposes the service inside the cluster
